.k8s/live-1/production/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laa-court-data-ui-worker
  namespace: laa-court-data-ui-production
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      app: laa-court-data-ui
      tier: worker
  template:
    metadata:
      labels:
        app: laa-court-data-ui
        tier: worker
    spec:
      containers:
        - name: laa-court-data-ui-worker
          imagePullPolicy: Always
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-get-paid/laa-court-data-ui:set-me
          command: ['bundle', 'exec', 'sidekiq']
          readinessProbe:
            exec:
              command: ['bundle', 'exec', 'rake', 'worker:healthcheck']
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ['bundle', 'exec', 'rake', 'worker:healthcheck']
            initialDelaySeconds: 30
            periodSeconds: 30
        - name: laa-court-data-ui-metrics
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-get-paid/laa-court-data-ui:set-me
          imagePullPolicy: Always
          command: ['sh', '-c', "bundle exec prometheus_exporter --bind 0.0.0.0"]
          ports:
          - containerPort: 9394
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9394
            initialDelaySeconds: 10
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /metrics
              port: 9394
            initialDelaySeconds: 10
            periodSeconds: 60
